--- a/app/src/main/res/drawable/button_signup_selector.xml
+++ b/app/src/main/res/drawable/button_signup_selector.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- res/drawable/button_signup_selector.xml -->
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners
-        android:topLeftRadius="20dp"
-        android:bottomLeftRadius="20dp" />
-    <solid android:color="@color/blue_500" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<!-- সিলেক্টেড স্টেট -->
+<item android:state_selected="true">
+    <shape android:shape="rectangle">
+        <corners
+            android:topLeftRadius="20dp"
+            android:bottomLeftRadius="20dp" />
+        <solid android:color="@color/blue_500" />
+    </shape>
+</item>
+<!-- ডিফল্ট স্টেট -->
+<item>
+    <shape android:shape="rectangle">
+        <corners
+            android:topLeftRadius="20dp"
+            android:bottomLeftRadius="20dp" />
+        <solid android:color="@color/white" />
+        <stroke
+            android:width="1dp"
+            android:color="@color/blue_500" />
+    </shape>
+</item>
+</selector>
