--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="main_bg">#74D7F3</color>
-    <color name="blue">#0000FF</color>
+    <color name="blue">#0E90F6</color>
     <color name="light_blue">#ADD8E6</color>
     <color name="dark_blue">#00008B</color>
     <color name="green">#00FF00</color>
