--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,12 +14,14 @@
         android:id="@+id/animationView"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:padding="10dp"
+        android:scaleType="centerCrop"
+        android:layout_margin="20dp"
         app:lottie_rawRes="@raw/laundry"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"/>
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="SignUp To Continue"
@@ -56,124 +58,203 @@
 
     </LinearLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/nameInputLayout"
+    <LinearLayout
+        android:id="@+id/signUpLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:startIconDrawable="@drawable/user_icon"
-        app:endIconMode="clear_text"
-        android:hint="Enter Your Name"
-        android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         >
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edName"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/nameInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:textColor="@color/white"
-            />
+            app:startIconDrawable="@drawable/user_icon"
+            app:endIconMode="clear_text"
+            android:hint="Enter Your Name"
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="10dp"
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:textColor="@color/black"
+                />
 
-    </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/emailInputLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:startIconDrawable="@drawable/baseline_email_24"
-        app:endIconMode="clear_text"
-        android:hint="Inter Your Email"
-        android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="10dp"
-        >
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edEmail"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/emailInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:textColor="@color/white"
-            />
+            app:startIconDrawable="@drawable/baseline_email_24"
+            app:endIconMode="clear_text"
+            android:hint="Enter Your Email"
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="10dp"
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/black"
+                />
 
-    </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/password1InputLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:startIconDrawable="@drawable/baseline_lock_24"
-        app:endIconMode="password_toggle"
-        android:hint="Inter Your Password"
-        android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="10dp"
-        >
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edPassword1"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/password1InputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:textColor="@color/white"
-            />
+            app:startIconDrawable="@drawable/baseline_lock_24"
+            app:endIconMode="password_toggle"
+            android:hint="Enter Your Password"
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="10dp"
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edPassword1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textColor="@color/black"
+                />
 
-    </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/password2InputLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:startIconDrawable="@drawable/baseline_lock_24"
-        app:endIconMode="password_toggle"
-        android:hint="Inter Your Password"
-        android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="10dp"
-        >
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edPassword2"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/password2InputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:textColor="@color/white"
-            />
+            app:startIconDrawable="@drawable/baseline_lock_24"
+            app:endIconMode="password_toggle"
+            android:hint="Enter Your Password"
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="10dp"
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edPassword2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textColor="@color/black"
+                />
 
-    </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginHorizontal="20dp"
+            >
+            <CheckBox
+                android:id="@+id/checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Agree to "
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Terms and Conditions."
+                android:textColor="@color/blue"
+                android:textStyle="bold"
+                />
+
+        </LinearLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/signUpButton"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/button_bg"
+            android:text="Sign Up"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            />
+    </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/signInLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginHorizontal="20dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone"
         >
-        <CheckBox
-            android:id="@+id/checkbox"
-            android:layout_width="wrap_content"
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/loginEmailInputLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Agree to "
-            />
+            app:startIconDrawable="@drawable/baseline_email_24"
+            app:endIconMode="clear_text"
+            android:hint="Enter Your Email"
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="10dp"
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/loginEdEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/black"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/loginPasswordInputLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:startIconDrawable="@drawable/baseline_lock_24"
+            app:endIconMode="password_toggle"
+            android:hint="Enter Your Password"
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="20dp"
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/loginEdPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textColor="@color/black"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Terms and Conditions."
+            android:text="Forget Password"
+            android:layout_margin="20dp"
+            android:textAlignment="textEnd"
             android:textColor="@color/blue"
             android:textStyle="bold"
             />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/signInButton"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/button_bg"
+            android:text="Sign In"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            />
     </LinearLayout>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/signUpButton"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@drawable/button_bg"
-        android:text="Sign Up"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        />
 
 
 
