--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="light_yellow">#FFFFE0</color>
     <color name="dark_yellow">#8B8B00</color>
     <color name="blue_500">#3498DB</color>
+    <color name="gray">#838181</color>
 </resources>
