--- a/app/src/main/res/layout/custom_tab.xml
+++ b/app/src/main/res/layout/custom_tab.xml
@@ -3,12 +3,13 @@
     android:orientation="vertical"
     android:gravity="center"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="20dp">
 
     <ImageView
         android:id="@+id/tabIcon"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:src="@drawable/icon_cart"
         />
 
