--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -30,15 +30,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <!-- Add Button -->
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnAdd"
-        android:layout_height="wrap_content"
+    <!-- Remove Button -->
+    <ImageButton
+        android:id="@+id/btnMinus"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/icon_minus"
+        android:padding="4dp"
+        android:contentDescription="Minus"
+         />
+
+    <!-- Quantity Text -->
+    <TextView
+        android:id="@+id/textViewQuantity"
+        android:text="0"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_marginHorizontal="6dp"
         android:layout_width="wrap_content"
-        android:text="Add"
-        android:textColor="@color/white"
-        android:background="@drawable/button_bg"
-        android:padding="5dp"
+        android:layout_height="wrap_content" />
+
+    <!-- Add Button -->
+    <ImageButton
+        android:id="@+id/btnAdd"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/icon_plus"
+        android:padding="4dp"
+        android:contentDescription="Add"
         />
 </LinearLayout>
 
