--- a/app/src/main/res/menu/tool_menu.xml
+++ b/app/src/main/res/menu/tool_menu.xml
@@ -4,10 +4,10 @@
 
     <item
         android:id="@+id/cart"
-        android:title="Cart"
         android:icon="@drawable/icon_cart"
+        android:title="Cart"
+        android:actionLayout="@layout/cart_icon_layout"
         app:showAsAction="always"
-        android:checkable="true"
         />
 
     <item
