--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/white"
     android:padding="16dp"
+    android:scrollbars="none"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".Fragments.CartFragment">
 
@@ -195,12 +196,15 @@
             android:textSize="14sp"
             android:textColor="@color/black"/>
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSelectShop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Select Shop"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginVertical="16dp"
+            android:background="@drawable/button_bg"
+            android:textColor="@color/white"
+            />
 
 
         <EditText
