--- a/app/src/main/res/layout/activity_products_list.xml
+++ b/app/src/main/res/layout/activity_products_list.xml
@@ -8,6 +8,13 @@
     android:orientation="vertical"
     tools:context=".ProductsListActivity">
 
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:title="Product List"
+        />
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
@@ -25,6 +32,17 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnPlaceOrder"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="Place Order"
+        android:layout_marginVertical="16dp"
+        android:layout_gravity="center"
+        android:background="@drawable/button_bg"
+        android:textColor="@color/white"
+        />
 
 
 </LinearLayout>
