--- a/app/src/main/res/menu/bot_menu.xml
+++ b/app/src/main/res/menu/bot_menu.xml
@@ -9,15 +9,22 @@
         />
 
     <item
+        android:id="@+id/category"
+        android:title="Category"
+        android:icon="@drawable/icon_categories"
+        android:checkable="true"
+        />
+
+    <item
         android:id="@+id/order"
-        android:title="My Orders"
+        android:title="Orders"
         android:icon="@drawable/order"
         android:checkable="true"
         />
 
     <item
         android:id="@+id/my_cart"
-        android:title="My Cart"
+        android:title="Cart"
         android:icon="@drawable/icon_cart"
         android:checkable="true"
         />
