--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,12 @@
     <color name="gray">#838181</color>
     <color name="selected_card_color">#E3F2FD</color>
     <color name="default_card_color">#FFFFFF</color>
+    <color name="background_grey">#F5F5F5</color>
+    <color name="card_stroke">#E0E0E0</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#757575</color>
+    <color name="divider_grey">#EEEEEE</color>
+    <color name="primary_color">#6200EE</color>
+    <color name="primary_light">#D1C4E9</color>
+    <color name="status_pending">#FFF3E0</color>
 </resources>
