--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -7,61 +7,23 @@
     android:orientation="vertical"
     tools:context=".Fragments.OrdersFragment">
 
-    <TextView
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="My Orders"
-        android:textAlignment="center"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        />
+        android:layout_gravity="top"
+        app:tabMode="scrollable"
+        app:tabGravity="center"
+        app:tabIndicatorColor="@color/blue"
+        app:tabIndicatorHeight="4dp"
+        app:tabSelectedTextColor="@color/white"
+        app:tabTextColor="@color/gray" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:progressBackgroundTint="@color/blue"
-        android:visibility="gone"
-        />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
-    <LinearLayout
-        android:id="@+id/animationLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="100dp"
-        android:visibility="gone"
-        >
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/animationView"
-            android:layout_width="300dp"
-            android:layout_height="200dp"
-            android:scaleType="centerCrop"
-            android:layout_margin="20dp"
-            app:lottie_rawRes="@raw/no_order"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true"
-            />
-
-        <TextView
-            android:id="@+id/noOrderTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="No Orders"
-            android:textStyle="bold"
-            android:textSize="18sp"
-
-            />
-    </LinearLayout>
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        />
 
 </LinearLayout>
