--- a/app/src/main/res/layout/activity_track_order.xml
+++ b/app/src/main/res/layout/activity_track_order.xml
@@ -127,7 +127,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="32dp"
                 android:layout_marginBottom="24dp"
-                android:text="Contact Support"
+                android:text="Contact Shop"
                 android:textAllCaps="false"
                 app:backgroundTint="@color/blue"
                 app:cornerRadius="8dp"
